# DGAN

./: .gitignore  README.md  funzionamento.txt  main.py  main_eval.py  main_eval2.py  problema loss.txt  pyproject.toml  requirements.txt
checkpoints/: dgan_final.pt
config/: config.py  config_loader.py  data_config.json  data_config2.json  model_config.json
eval/: config.py  metrics.py  metrics_distribution.py  metrics_longitudinal.py  metrics_scores.py  plots.py  plots_distribution.py  plots_longitudinal.py  plots_scores.py  report.py  report_pdf.py  scores.py
model/: dgan.py  discriminator.py  generator.py
output/exp_3/: parametri.txt
output/exp_6/: parametri.txt
processing/: cat_encoding.py  processor.py
utils/: check_data.py  losses.py  plots.py
validation/: metrics.py  metrics_2.py
