[project]
name = "dgan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "polars>=1.37.1",
    "sci-kit>=0.1.0",
    "torch>=2.10.0",
]
